--- a/css/css.css
+++ b/css/css.css
@@ -533,7 +533,23 @@ margin-bottom: .5em;
   height: 58.6667vw;
   border: 0px solid red;
 }
-
+.darker{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.3);
+  opacity:0;
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -ms-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  border: 1px solid red;
+}
+.darker:hover{
+  opacity: 1;
+}
 .swipeboxEx{
   margin-top: 1em;
 }
