--- a/css/loading.css
+++ b/css/loading.css
@@ -135,9 +135,17 @@
         width: 200px;
         height: 200px;
     }
+    @media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
     .uil-default-css {
         background-color: red;
+        transform:scale(0.1);
+        margin: auto;
     }
+}
 /*<div class='uil-default-css' style='transform:scale(0.16);'>
     <div style='top:80px;left:93px;width:14px;height:40px;background:#ececec;-webkit-transform:rotate(0deg) translate(0,-60px);transform:rotate(0deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
     <div style='top:80px;left:93px;width:14px;height:40px;background:#ececec;-webkit-transform:rotate(36deg) translate(0,-60px);transform:rotate(36deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
