--- a/css/loading.css
+++ b/css/loading.css
@@ -134,6 +134,7 @@
         background: none;
         width: 200px;
         height: 200px;
+        border: 1px solid red;
     }
     @media screen 
   and (min-device-width: 1200px) 
@@ -141,9 +142,9 @@
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
     .uil-default-css {
-        background-color: red;
+        /*background-color: red;
         transform:scale(0.1);
-        margin: auto;
+        margin: auto;*/
     }
 }
 /*<div class='uil-default-css' style='transform:scale(0.16);'>
