--- a/css/loading.css
+++ b/css/loading.css
@@ -143,7 +143,9 @@
         display: block;
         position: fixed;
         top: 0px;
+        left: 50vw;
         width: 20vw;
+
         margin: auto;
         border: 1px solid red;
 
