--- a/css/css.css
+++ b/css/css.css
@@ -3,6 +3,12 @@
   padding-top: 1em;
 }
 
+#device-flag{
+  display: none;
+  background-color: red;
+}
+
+
 :focus {
   outline:none;
 
@@ -854,6 +860,11 @@ display: flex;
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
+
+#device-flag{
+  background-color: green;
+}
+
 .myname{
       color: #fefefe;
       margin: ;
