--- a/css/css.css
+++ b/css/css.css
@@ -853,7 +853,13 @@ display: flex;
   margin-right: .3em;
 }
 
+@media screen and (min-width: 800px) {
 
+#device-flag{
+  background-color: rgb(0,0,2);
+}
+
+}
 
 @media screen 
   and (min-device-width: 1200px) 
