--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,50 @@ body {
   background-repeat:no-repeat;
 }
 
+@media screen and (min-width: 800px) {
+ .frame {
+    height: 24vw;
+    line-height: 250px;
+    overflow: hidden;
+    margin-left: 8vw;
+    margin-right: 8vw;
+    margin-top: .5em; 
+    margin-bottom: 5vw;
+  }
+
+  .frame ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-size: 50px;
+    
+  }
+
+  .frame ul li {
+    float: left;
+    width: 36vw;
+    height: 100%;
+    margin: 0 3px 0 0;
+    padding: 0;
+    background-color: #f6f6f6;
+    
+    color: black;
+    text-align: center;
+    cursor: pointer;
+    
+    
+  }
+
+  .frame ul li.active {
+    
+    background-color: #f6f6f6;
+  }
+
+
+}
+
+
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
