--- a/css/css.css
+++ b/css/css.css
@@ -865,7 +865,7 @@ display: flex;
       margin: ;
       font-size: 2.8em;
       letter-spacing: .1em;
-}
+  }
 
     .h3{
       color: #fefefe;
@@ -1190,7 +1190,7 @@ border: .2px solid #cccccc;
   margin-bottom: 1vw;
   height: 3.5vw;
   color:#9a9a9a;
-padding-left: 1.5em;
+padding-left: .5em;
 text-align: left;
   display: flex;
   align-items: center;
