--- a/css/css.css
+++ b/css/css.css
@@ -854,6 +854,19 @@ display: flex;
   margin-right: .3em;
 }
 
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (orientation: landscape) { 
+
+    header{
+    height: 10vw;
+    }
+
+
+}
+
+
 @media screen and (min-width: 800px) {
 
 #device-flag{
