--- a/css/css.css
+++ b/css/css.css
@@ -460,8 +460,8 @@ h6{
 
 }
 #latest-textbox{
-  /*display: flex;
-  flex-wrap: wrap;*/
+  display: flex;
+  flex-wrap: wrap;
 text-align: center;
 top:0px;
 left: 0px;
@@ -469,10 +469,12 @@ border: 0px solid red;
 width: 100%;
 height: 100%;
 padding-top: 10vh;
+align-items: center;
 }
 #latest-text{
   color: #fefefe;
   text-align: center;
+  margin: auto;
 }
 #camera-box{
   display: flex;
