--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,50 @@ body {
   background-size:cover;
   background-repeat:no-repeat;
 }
+
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (orientation: landscape) { 
+
+.frame {
+    height: 24vw;
+    line-height: 250px;
+    overflow: hidden;
+    margin-left: 8vw;
+    margin-right: 8vw;
+    margin-top: .5em; 
+    margin-bottom: 5vw;
+  }
+
+  .frame ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-size: 50px;
+    
+  }
+
+  .frame ul li {
+    float: left;
+    width: 36vw;
+    height: 100%;
+    margin: 0 10px 0 0;
+    padding: 0;
+    background-color: #f6f6f6;
+    
+    color: black;
+    text-align: center;
+    cursor: pointer;
+    
+    
+  }
+    
+  }
+
+
+
 @media screen and (min-width: 800px) {
  .frame {
     height: 24vw;
