--- a/css/css.css
+++ b/css/css.css
@@ -925,7 +925,14 @@ width: 50%;
 
 #contact-info{
 width: 50%;
+padding-left: 3vw;
 }
+
+.form-element{
+height: 12vh;
+}
+
+
 
 }
 @media screen and (min-width: 800px) {
