--- a/css/css.css
+++ b/css/css.css
@@ -871,6 +871,12 @@ display: flex;
       height: 10vw;
     }
 
+#banner-text{
+  margin-right:30px;
+  float: right;
+}
+
+
   #latest{
     height: 60vh;
   }
