--- a/css/css.css
+++ b/css/css.css
@@ -469,6 +469,7 @@ border: 0px solid red;
 width: 100%;
 height: 100%;
 padding-top: 10vh;
+padding-top: 0vh;
 align-items: center;
 }
 #latest-text{
