--- a/css/css.css
+++ b/css/css.css
@@ -1550,11 +1550,15 @@ display: flex;
   margin-bottom: 5vw;
 }
 #latest-textbox{
- 
+ width: 100%;
+ height: 100%;
+ border: 1px solid red;
 }
 #latest-text{
   color: #fefefe;
   text-align: center;
+margin: auto;
+border: 1px solid yellow;
 }
 #camera-box{
   display: flex;
