--- a/css/css.css
+++ b/css/css.css
@@ -1134,7 +1134,9 @@ margin-bottom: .1em;
   border: .2px solid #ececec;
   border-radius: 0 0 4px 4px;
 }
-
+.gallery-text:hover{
+  box-shadow: 0px 2px 6px #cccccc; 
+}
 .gallery-container{
  padding-left: 8vw;
  padding-right: 8vw;
