--- a/css/css.css
+++ b/css/css.css
@@ -1136,7 +1136,7 @@ margin-bottom: .1em;
 
 }
 .gallery-text:hover{
-  box-shadow: 0px 1px 10px #cccccc; 
+  box-shadow: 0px 1px 10px #ececec; 
 }
 .gallery-container{
  padding-left: 8vw;
