--- a/css/css.css
+++ b/css/css.css
@@ -1136,8 +1136,8 @@ margin-bottom: .1em;
 
 }
 .gallery:hover{
-  box-shadow: 0px 2px 15px #ececec; 
- 
+  box-shadow: 0px 2px 10px #cccccc; 
+
 }
 .gallery-container{
  padding-left: 8vw;
