--- a/css/css.css
+++ b/css/css.css
@@ -1136,7 +1136,7 @@ margin-bottom: .1em;
 
 }
 .gallery:hover{
-  box-shadow: 0px 2px 15px #cdcdcd; 
+  box-shadow: 0px 2px 15px #dddddd; 
 
 }
 .gallery-container{
