--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ body {
     overflow: hidden;
     margin-left: 8vw;
     margin-right: 8vw;
-    margin-top: .5em; 
+    margin-top: 5vw; 
     margin-bottom: 5vw;
   }
 
