--- a/css/css.css
+++ b/css/css.css
@@ -475,7 +475,7 @@ align-items: center;
 #latest-text{
   color: #fefefe;
   text-align: center;
-  margin: auto;
+  margin: 6vw;
   font-size: 1em;
 }
 #camera-box{
@@ -1088,6 +1088,7 @@ display: flex;
   color: #fefefe;
   text-align: center;
   margin: auto;
+  font-size: 1.8em;
 }
 #camera-box{
   display: flex;
