--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,6 @@
 #below-banner{
    
-  padding-top: 1em;
+  padding-top: 1.5em;
 }
 
 #device-flag{
@@ -525,7 +525,7 @@ margin-top: .2em;
 .gallary-title{
 
 text-align: center; 
-margin-bottom: .5em;
+margin-bottom: 1.5em;
 }
 
 .gallery-container{
