--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ body {
     overflow: hidden;
     margin-left: 8vw;
     margin-right: 8vw;
-    margin-top: .5em; 
+    margin-top: 2em; 
     margin-bottom: 5vw;
   }
 
