--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
     margin-left: 8vw;
     margin-right: 8vw;
     margin-top: 2em; 
-    margin-bottom: 5vw;
+    margin-bottom: 3em;
   }
 
   .frame ul {
