--- a/css/css.css
+++ b/css/css.css
@@ -898,6 +898,9 @@ display: flex;
   width: 55vw;
   height: 55vw;
 }
+.myintro{
+  padding: 8vw;
+}
 @media only screen 
   and (min-device-width: 375px) 
   and (orientation: landscape) { 
