--- a/css/css.css
+++ b/css/css.css
@@ -1501,11 +1501,14 @@ width: 50%;
   height: 30vw;
 }
 .myintro{
-  padding: 0vw;
+  padding-right: 6vw;
+  padding-right: 3vw;
   width: 50%;
+  
+}
+#me-intro-p{
   color: #9a9a9a;
 }
-
 
 
 
