--- a/css/css.css
+++ b/css/css.css
@@ -1257,7 +1257,7 @@ margin-left: 4vw;
   background-size:cover;
   background-repeat:no-repeat;
   background-position: center;
-  height: 80vh;
+  height: 70vh;
   display: inline;
   padding-left: 8vw;
   padding-top: 3vw;
@@ -1303,6 +1303,7 @@ border: 0px solid yellow;
   display: flex;
   position: relative;
   margin: 8vw;
+  margin-top: 2em;
   border: 0px solid green;
 }
 #contact-img{
