--- a/css/css.css
+++ b/css/css.css
@@ -673,7 +673,7 @@ margin-bottom: 1em;
 }
 #contact-img{
     border: 0px solid red;
-  background:url(../img/contact.jpg);
+  background:url(../img/contact-circle.jpg);
   background-size:cover;
   background-repeat:no-repeat;
   background-position: center;
