--- a/css/css.css
+++ b/css/css.css
@@ -673,8 +673,8 @@ margin-bottom: 1em;
 }
 #contact-img{
     border: 0px solid red;
-  background:url(../img/contact-circle.png);
-  background-size:cover;
+  background:url(../img/contact-circle.jpg);
+  background-size:contain;
   background-repeat:no-repeat;
   background-position: center;
   height: 50vw;
